--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,7 +1,4 @@
-version: '3.4'
-
 services:
-
   sourcingdb:
     container_name: sourcingdb
     restart: always
@@ -9,23 +6,30 @@ services:
        - ${WEBAPP_STORAGE_HOME}/site:/data/db
     ports:
        - "27017:27017"
-  #esourcing.products:
-  #  container_name: esourcingproduct
-  #  environment:
-  #    - ASPNETCORE_ENVIRONMENT=Development
-  #  ports:
-  #    - "80"
-  
+
   esourcing.products:
-   container_name: esourcingproducts
-   environment:
-     - ASPNETCORE_ENVIRONMENT=Development
-     - "ProductDatabaseSettings:ConnectionString=mongodb://sourcingdb:27017"
-   depends_on:
-       - sourcingdb
-   ports:
-     - "8000:80"
-   volumes:
-     - ${HOME}/ASP.NET/Https:/root/.aspnet/https:ro
-     - ${HOME}/.microsoft/usersecrets/:/root/.microsoft/usersecrets
-   
+    container_name: esourcingproducts
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ProductDatabaseSettings:ConnectionString=mongodb://sourcingdb:27017"
+    depends_on:
+        - sourcingdb
+    ports:
+      - "8000:80"
+    volumes:
+      - ${HOME}/ASP.NET/Https:/root/.aspnet/https:ro
+      - ${HOME}/.microsoft/usersecrets/:/root/.microsoft/usersecrets
+
+  esourcing.sourcing:
+    container_name: esourcingsourcing
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "SourcingDatabaseSettings:ConnectionString=mongodb://sourcingdb:27017"
+    depends_on:
+      - sourcingdb
+    volumes:
+      - ${HOME}/.microsoft/usersecrets/:/root/.microsoft/usersecrets
+      - ${HOME}/.aspnet/https:/root/.aspnet/https/
+    ports:
+      - "8001:80"
+
