--- a/EventBusRabbitMQ/EventBusRabbitMQ.csproj
+++ b/EventBusRabbitMQ/EventBusRabbitMQ.csproj
@@ -8,12 +8,11 @@
 
   <ItemGroup>
     <Folder Include="Core\" />
-    <Folder Include="Events\" />
-    <Folder Include="Producer\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
   </ItemGroup>
